# prism-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRISM-v1.0p.py  PRISM-v1.1.1p.py  PRISM-v1.1p.py  PRISM-v1.2.0p.py  README.md  prism-core.py  pyproject.toml
archive/: prism-core.py
archive/prism-core/: __init__.py  commands.py  defaults.py  extensions.py  filesystem.py  main.py
docs/: ARCHITECTURE_MAP.md  EXTENSIONS.md  USER_GUIDE.md
extensions/: DevinDaboisAwesomeDateAndYearSorter  expanded-file-index-v1.0.py  expanded_file_types.py  metadata-image-sorter-v1.1.py
extensions/community/: DevinDaboisAwesomeDateAndYearSorter.py
extensions/developer/: expanded-file-index-v1.1.py  expanded-file-types-v1.2.py  metadata-image-sorter-v1.2.py  metadata-image-sorter-v1.3.py  pdf-classifier-APs-v1.0.py  pdf-classifier-APs-v1.1.py
src/prism_core/: __init__.py  cli.py  config_edit.py  config_store.py  defaults.py  logs.py
src/prism_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
