[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-core"
version = "1.3.0.dev2"
description = "A safe folder cleanup tool with preview, undo, logs, config profiles, and experimental extensions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Lemuel L." }
]
keywords = ["cli", "file-organizer", "file-management", "automation", "python"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/lemlnn/prism-core"
Repository = "https://github.com/lemlnn/prism-core"
Issues = "https://github.com/lemlnn/prism-core/issues"

[project.scripts]
prism = "prism_core.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
